# zynq7020_ov5640_yolov6lite

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/models/yolov6lite_s/: yolov6lite_s.ncnn.param
cmake/: toolchain.cmake
data/: ov5640_af_fw.h
docs/: BOOTLOADER_OTA_WORKFLOW.md  BUILD_AND_LINK_STANDARD.md  CAM_LAUNCHER_WORKFLOW.md  CAM_SYSTEM_SOFTWARE_TOP_LEVEL_SPEC.md  CAM_SYSTEM_TEST_CASES.md  CORE_IRQ_AFFINITY_TEST_PLAN.md  DRIVER_INTEGRATION_A08.md  DRIVER_INTEGRATION_A09.md  LEARNING_PLAN.md  MODEL_ASSETS.md  PETALINUX_PACKAGE_WORKFLOW.md  PROJECT_FREEZE_CHECK_A08.md  THIRD_PARTY_COMPONENTS.md  WEBSOCKET_PROTOCOL.md  WIFI_DRIVER_WORKFLOW.md
include/: app_state.h  config.h  test.h  tracker.h
include/cam_system/: app_state.h  config.h  tracker.h
packaging/petalinux/recipes-ai/ncnn/: ncnn_20260526.bb
packaging/petalinux/recipes-apps/cam-launcher/: cam-launcher.bb
packaging/petalinux/recipes-apps/cam-launcher/files/: cam-launcher  cam-launcher.c
packaging/petalinux/recipes-apps/cam-ota/: cam-ota.bb
packaging/petalinux/recipes-apps/cam-ota/files/: cam-ota  cam-ota-bootguard
packaging/petalinux/recipes-apps/cam-system/: cam-system.bb
packaging/petalinux/recipes-apps/ssh-access-dev/: ssh-access-dev.bb
packaging/petalinux/recipes-apps/ssh-access-dev/files/: authorized_keys.example
packaging/petalinux/recipes-apps/wifi-init/: wifi-init.bb
packaging/petalinux/recipes-apps/wifi-init/files/: S50wifi
packaging/petalinux/recipes-bsp/device-tree/: device-tree.bbappend
packaging/petalinux/recipes-bsp/device-tree/files/: pl-custom.dtsi  system-user.dtsi
packaging/petalinux/recipes-bsp/u-boot/: u-boot-zynq-scr.bbappend
packaging/petalinux/recipes-bsp/u-boot/files/: bsp.cfg
packaging/petalinux/recipes-graphics/jpeg/: libjpeg-turbo_3.1.4.bb
packaging/petalinux/recipes-graphics/jpeg/files/: 0001-libjpeg-turbo-remove-install-rpath.patch
packaging/petalinux/recipes-kernel/8812bu/: 8812bu_git.bb
packaging/petalinux/recipes-kernel/cam-ov5640-control/: cam-ov5640-control_1.0.bb
packaging/petalinux/recipes-kernel/cam-ov5640-control/files/: Makefile  cam-dvp-bridge.c  cam-ov5640-control.c
packaging/petalinux/recipes-kernel/linux/: linux-xlnx_%.bbappend
packaging/petalinux/recipes-kernel/linux/linux-xlnx/: cam_ov5640_control.cfg
packaging/petalinux/recipes-support/cam-opencv/: cam-opencv_4.13.0.bb
scripts/board/: core_irq_probe.sh
scripts/petalinux/: build_boot_scr.sh  stage_cam_launcher.sh  stage_cam_opencv.sh  stage_cam_system.sh  stage_libjpeg_turbo.sh  stage_ncnn.sh  stage_ota.sh  stage_ov5640_control.sh  stage_ssh_access_dev.sh  stage_wifi.sh
src/: capture.c  cmd_handler.c  cmd_handler.h  hal_frmbuf.c  hal_frmbuf.h  hal_mmio.c  hal_mmio.h  hal_ov5640.c  hal_ov5640.h  jpeg_enc.c  jpeg_enc.h  main.cpp  net_server.c  optical_flow.cpp  optical_flow.h  test.c  tracker.c  yolo_detect.cpp  yolo_detect.h
src/app/: main.cpp
src/capture/: capture.c  capture.h
src/control/: tracker.c
src/media/: jpeg_enc.c
src/network/: cmd_handler.c  net_server.c  net_server.h  ws_protocol.c  ws_protocol.h
src/platform/: hal_frmbuf.c  hal_frmbuf.h  hal_ov5640.c  hal_ov5640.h
src/vision/: optical_flow.cpp  yolo_detect.cpp
tests/: README.md  cmd_handler_route_test.c  ws_protocol_test.c
